fixes, test config, readme

--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "@ignitial/iio-app-server",
   "version": "5.0.0",
   "description": "Ignitial.io Application server library",
-  "author": "Victor Andritoiu <andritoiu@ignitial.fr>",
+  "author": "Victor Andritoiu <devandrito@gmail.com>",
   "repository": "git@gitlab.com:iio-core/iio-app-server.git",
   "main": "src/index.js",
   "scripts": {
-    "test": "node ./test/index.js",
+    "test": "scripts/dev_start.sh",
+    "test:stop": "scripts/dev_clean.sh",
     "lint": "eslint --ext .js src"
   },
   "dependencies": {
-    "@ignitial/iio-services": "^2.2.1",
+    "@ignitial/iio-services": "^2.2.2",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -18,7 +19,6 @@
     "connect-multiparty": "^2.2.0",
     "connect-rest": "^3.0.29",
     "cors": "^2.8.5",
-    "cpu-stats": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "minio": "^7.0.10",
     "nodemailer": "^6.2.1",
@@ -33,7 +33,7 @@
     "eslint": "^4.19.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0"
