--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,60 +1,34 @@
 version: '3.3'
 
 services:
-  redis:
-    image: redis:latest
-    container_name: redis
+  dlake-iioat:
+    image: registry.ignitial.io/ignitial/dlake:3.0.0
+    container_name: dlake-iioat
     ports:
-      - "6379:6379"
-    networks:
-      iio:
-        aliases:
-          - redis
-
-  mongo:
-    image: mongo:3.6
-    container_name: mongo
-    volumes:
-      - /home/vandrito/iio-data/mongo:/data/db
-    ports:
-      - "40000:27017"
-    networks:
-      iio:
-        aliases:
-          - mongo
-
-  minio:
-    image: minio/minio
-    container_name: minio
-    volumes:
-      - /home/vandrito/iio-data/minio/data:/data
-      - /home/vandrito/iio-data/minio/config:/root/.minio
-    ports:
-      - "9000:9000"
-    command: server /data
-    networks:
-      iio:
-        aliases:
-          - minio
-
-  dlake:
-    image: registry.ignitial.io/ignitial/dlake
-    container_name: dlake
-    volumes:
-      - ${PWD}/datum:/opt/dlake/datum
-    ports:
-      - "20991:20991"
+      - "20989-20999:20989-20999"
     environment:
       - REDIS_HOST=redis
       - MONGODB_URI=mongodb://mongo:27017
-      - MONGODB_DBNAME=ignitialio
-      - IIOS_NAMESPACE=ignitialio
+      - MONGODB_DBNAME=${MONGODB_DBNAME}
+      - IIOS_NAMESPACE=${IIOS_NAMESPACE}
       - IIOS_SERVER_HOST=0.0.0.0
       - IIOS_SERVER_PORT=20991
     networks:
-      iio:
-        aliases:
-          - dlake
+      infra:
+
+  auth-iioat:
+    image: registry.ignitial.io/ignitial/auth:1.0.0
+    container_name: auth-iioat
+    ports:
+      - "20199:20199"
+    environment:
+      - REDIS_HOST=redis
+      - IIOS_NAMESPACE=${IIOS_NAMESPACE}
+      - IIOS_SERVER_HOST=0.0.0.0
+      - IIOS_SERVER_PORT=20199
+    networks:
+      infra:
 
 networks:
-  iio:
+  infra:
+    external: true
