--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ignitial/iio-app-server",
-  "version": "5.0.0",
+  "version": "5.1.0",
   "description": "Ignitial.io Application server library",
   "author": "Victor Andritoiu <devandrito@gmail.com>",
   "repository": "git@gitlab.com:iio-core/iio-app-server.git",
@@ -15,6 +15,7 @@
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bson": "^4.0.2",
     "connect": "^3.7.0",
     "connect-multiparty": "^2.2.0",
     "connect-rest": "^3.0.29",
