--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ignitial/iio-app-server",
-  "version": "5.1.0",
+  "version": "5.1.1",
   "description": "Ignitial.io Application server library",
   "author": "Victor Andritoiu <devandrito@gmail.com>",
   "repository": "git@gitlab.com:iio-core/iio-app-server.git",
@@ -21,8 +21,9 @@
     "connect-rest": "^3.0.29",
     "cors": "^2.8.5",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.14",
     "minio": "^7.0.10",
-    "nodemailer": "^6.2.1",
+    "nodemailer": "^6.3.0",
     "pino": "^5.12.6",
     "serve-static": "^1.14.1",
     "socket.io": "^2.2.0",
