--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ignitial/iio-app-server",
-  "version": "5.1.20",
+  "version": "5.1.21",
   "description": "Ignitial.io Application server library",
   "author": "Victor Andritoiu <devandrito@gmail.com>",
   "repository": "git@gitlab.com:iio-core/iio-app-server.git",
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "minio": "^7.0.12",
+    "morgan": "^1.9.1",
     "nodemailer": "^6.3.1",
     "pino": "^5.13.2",
     "serve-static": "^1.14.1",
